made some minor changes to get the app running, and updated my blog name

--- a/app/views/statics/contact.html.erb
+++ b/app/views/statics/contact.html.erb
@@ -5,7 +5,7 @@
 Hi everybody.  My name's Evan.  I'm into music, Japan, and coding.  If you want to collaborate, report bugs, send me hate/fan mail, or give me large sums of money, here are the best ways to get in touch with me.  
 </p>
 <p>
-You can see my projects on <a href="http://github.com/evanburchard">github</a> and my ramblings on my <a href="http://hobomage.blogspot.com">blog</a>.  Or just send me an <a href="mailto:evan.burchard@gmail.com">email</a>.
+You can see my projects on <a href="http://github.com/evanburchard">github</a> and my ramblings on my <a href="http://onesandheroes.blogspot.com">blog</a>.  Or just send me an <a href="mailto:evan.burchard@gmail.com">email</a>.
 </p>
 
 </div>
